[package]
name = "rust-alsb"
version = "0.1.0"
authors = ["Justin Duplessis <drfoliberg@gmail.com>"]

[dependencies]
image = "*"
byteorder = "*"
clap = "*"
rand = "*"

[[bin]]
path = "src/main.rs"
name = "main"

# The release profile, used for `cargo build --release`.
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

# The testing profile, used for `cargo test`.
[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
